--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,10 +1,7 @@
----
 items:
-  - text: Menu One
+  - text: Projects
     url: "#"
-  - text: Menu Two
-    url: "#"
-  - text: Menu Three
+  - text: Contact
     url: "#"
   - text: Blog
-    url: "/blog"
+    url: /blog
